🆕 feat: update wrapped document endpoint
